feat: Report 및 SharePost 관련 API 및 비즈니스 로직 추가